# BitsAndPieces

./: .gitmodules  CMakeLists.txt  README.md
include/: bap.hpp  ecs.hpp  entity.hpp  system.hpp  utilities.hpp
src/: bap.cpp  ecs.cpp  entitiy.cpp  main.cpp  system.cpp  utilities.cpp
